# json-c

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.am.inc  Makefile.in  NEWS  README  README-WIN32.html  README.html  README.json_object-split.md  README.md  RELEASE_CHECKLIST.txt  STYLE.txt  Stone Paper Scissor game by C language  abi-check.sh  aclocal.m4  aconfigure.sh  appveyor.yml  arraylist.c  arraylist.h  autogen.sh  bits.h  build_json_arm32.sh  build_json_arm64.sh  build_json_x86-32.sh  build_json_x86-64.sh  build_json_x86.sh  cmake-configure  conanfile.py  config.h.in  config.h.mac  config.h.win32  (+93 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: mac_compilation.yml  meson.yml
apps/: CMakeLists.txt  json_parse.c  meson.build
autoconf-archive/: README.txt
bench/: jc-bench.sh
cmake/: config.h.in
compat/: strdup.h
doc/: Doxyfile  Doxyfile.in
doc/html/: README_8md.html  annotated.html  arraylist_8h.html  bits_8h.html  classes.html  debug_8h.html  deprecated.html  dir_b62156a74b5a818be0c2ef9f85294b95.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x61.html  globals_0x65.html  globals_0x66.html  globals_0x68.html  globals_0x69.html  globals_0x6a.html  globals_0x6c.html  globals_0x6d.html  globals_0x70.html  globals_0x73.html  globals_0x74.html  globals_a.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_h.html  globals_i.html  globals_j.html  globals_l.html  globals_m.html  globals_n.html  globals_p.html  globals_s.html  globals_type.html  globals_vars.html  index.html  (+50 more)
fuzz/: CMakeLists.txt  README.md  bad_fuzzer.cc  build.sh  json_array_fuzzer.cc  json_array_fuzzer.dict  json_object_fuzzer.cc  json_pointer_fuzzer.cc  standalone_runner.cc  tokener_parse_ex_fuzzer.cc
json-c-0.10/doc/html/: annotated.html  arraylist_8h.html  bits_8h.html  debug_8h.html  files.html  functions.html  functions_vars.html  globals_defs.html  globals_enum.html  globals_func.html  index.html  json__object_8h.html  json__object__iterator_8h.html  linkhash_8h.html  pages.html  structjson__object__iter.html  structjson__object__iterator.html  structjson__tokener.html  structjson__tokener__srec.html  structlh__table.html  structprintbuf.html  unionjson__object_1_1data.html
json-c-0.12.1/doc/html/: arraylist_8h.html  functions.html  functions_vars.html  globals.html  globals_0x65.html  globals_0x66.html  globals_0x68.html  globals_0x74.html  globals_a.html  globals_e.html  globals_enum.html  globals_eval.html  globals_h.html  globals_s.html  globals_t.html  globals_type.html  globals_vars.html  index.html  json_8h.html  json__c__version_8h.html  json__object_8h.html  json__object__iterator_8h.html  json__object__private_8h.html  json__util_8h.html  linkhash_8h.html  pages.html  random__seed_8h.html  structarray__list.html  structjson__object.html  structjson__object__iter.html  structjson__tokener.html  structlh__table.html  structprintbuf.html  unionjson__object_1_1data.html
json-c-0.12/doc/html/: annotated.html  arraylist_8h.html  classes.html  files.html  globals.html  globals_0x61.html  globals_0x6d.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  json_8h.html  json__c__version_8h.html  json__inttypes_8h.html  json__object_8h.html  json__object__iterator_8h.html  json__object__private_8h.html  json__tokener_8h.html  (+9 more)
json-c-0.15/doc/: Doxyfile.in
json-c-0.18/doc/: CMakeLists.txt
json-c-0.18/doc/html/: annotated.html  classes.html  dir_b62156a74b5a818be0c2ef9f85294b95.html  functions.html  globals_defs.html  globals_enum.html  globals_i.html  globals_p.html  globals_type.html  globals_u.html  issues__closed__for__0_815_8md.html  issues__closed__for__0_817_8md.html  json_8h.html  json__inttypes_8h.html  json__object__iterator_8h.html  json__pointer_8h.html  json__pointer__private_8h.html  json__tokener_8h.html  json__types_8h.html  json__visit_8h.html  md_issues_closed_for_0_15.html  md_issues_closed_for_0_18.html  pages.html  printbuf_8h.html  structarray__list.html  structjson__patch__error.html  structjson__tokener.html  structlh__entry.html
tests/: CMakeLists.txt  Makefile.am  Makefile.in  json_patch_spec_tests.json  json_patch_tests.json  meson.build  parse_flags.c  strerror_override.c  test-defs.sh  test1.c  test1.expected  test1.test  test1Formatted_compact_array.expected  test1Formatted_plain.expected  test1Formatted_pretty.expected  test1Formatted_spaced.expected  test1Formatted_spaced_pretty.expected  test1Formatted_spaced_pretty_pretty_tab.expected  test2.c  test4.c  testReplaceExisting.c  testReplaceExisting.expected  test_basic.test  test_case.test  test_cast.c  test_cast.expected  test_charcase.c  test_common.h  test_compare.c  test_compare.expected  test_compare.test  test_deep_copy.c  test_deep_copy.expected  test_deep_nesting.c  test_deep_nesting.expected  test_double_serializer.c  test_double_serializer.expected  test_double_serializer.test  test_float.c  test_int_add.c  (+50 more)
toolchains/: README.md
toolchains/android/: Dockerfile
trustinsoft/: common.config  regenerate.py  test_fuzz.c
trustinsoft/fuzz_inputs/: 0-000a80a246.json  0-0670457419.json  0-06c269b630.json  0-090a03d2cb.json  0-097f620d51.json  0-09f37da007.json  0-0b57963f9b.json  0-0babba2e2f.json  0-1197788777.json  0-12d3b5ee1e.json  0-15460fde9b.json  0-1634237d36.json  0-22f311c530.json  0-23d6a734a7.json  0-3246b39a6e.json  0-3726f874bc.json  0-39442874d4.json  0-3d2178302f.json  0-3d8bb2c4e6.json  0-3d90fa020a.json  0-457db13b27.json  0-48098add03.json  0-489276424d.json  0-491486ca08.json  0-4b01618dfc.json  0-4c65da67b1.json  0-4da8f7fcf3.json  0-4e488c77ce.json  0-502c3739e9.json  0-50ef2f9e93.json  0-5caf49ea04.json  0-5ddb0b9312.json  0-6426b7fcc5.json  0-6aa5944cb4.json  0-792ae47d5f.json  0-7bff29d865.json  0-87c042d2d6.json  0-8b00c6ce89.json  0-8cf8f52955.json  0-8e8ce95129.json  (+1048 more)
trustinsoft/include/: config.h
windows/: json-c.sln  json-c.vcxproj
(+161 files in other folders)
